tests/ui/mir/issue-83499-input-output-iteration-ice.stderr
error: at least one trait must be specified
  --> $DIR/issue-83499-input-output-iteration-ice.rs:7:42
   |
LL | unsafe extern "C" fn foo(_: Bar, ...) -> impl {}
   |                                          ^^^^

error[E0412]: cannot find type `Bar` in this scope
  --> $DIR/issue-83499-input-output-iteration-ice.rs:7:29
   |
LL | unsafe extern "C" fn foo(_: Bar, ...) -> impl {}
   |                             ^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
